# artifact-pynguin-ssbse2020

./: LICENSE.md  README.md
data/: README.md  experiments.json  find_packages.py  generate_slurm_job_scripts.py  merge_statistics_csv.py  pyproject.toml  run_experiments.sh
data/data/: projects.csv
data/data/apimd/: statistics-iteration-1.csv  statistics-iteration-10.csv  statistics-iteration-11.csv  statistics-iteration-12.csv  statistics-iteration-13.csv  statistics-iteration-14.csv  statistics-iteration-15.csv  statistics-iteration-16.csv  statistics-iteration-17.csv  statistics-iteration-18.csv  statistics-iteration-19.csv  statistics-iteration-2.csv  statistics-iteration-20.csv  statistics-iteration-21.csv  statistics-iteration-22.csv  statistics-iteration-23.csv  statistics-iteration-24.csv  statistics-iteration-25.csv  statistics-iteration-26.csv  statistics-iteration-27.csv  statistics-iteration-28.csv  statistics-iteration-29.csv  statistics-iteration-3.csv  statistics-iteration-30.csv  statistics-iteration-4.csv  statistics-iteration-5.csv  statistics-iteration-6.csv  statistics-iteration-7.csv  statistics-iteration-8.csv  statistics-iteration-9.csv
data/data/async_btree/: statistics-iteration-1.csv  statistics-iteration-10.csv  statistics-iteration-11.csv  statistics-iteration-12.csv  statistics-iteration-13.csv  statistics-iteration-14.csv  statistics-iteration-15.csv  statistics-iteration-16.csv  statistics-iteration-17.csv  statistics-iteration-18.csv  statistics-iteration-19.csv  statistics-iteration-2.csv  statistics-iteration-20.csv  statistics-iteration-21.csv  statistics-iteration-22.csv  statistics-iteration-23.csv  statistics-iteration-24.csv  statistics-iteration-25.csv  statistics-iteration-26.csv  statistics-iteration-27.csv  statistics-iteration-28.csv  statistics-iteration-29.csv  statistics-iteration-3.csv  statistics-iteration-30.csv  statistics-iteration-4.csv  statistics-iteration-5.csv  statistics-iteration-6.csv  statistics-iteration-7.csv  statistics-iteration-8.csv  statistics-iteration-9.csv
data/data/codetiming/: statistics-iteration-1.csv  statistics-iteration-10.csv  statistics-iteration-11.csv  statistics-iteration-12.csv  statistics-iteration-13.csv  statistics-iteration-14.csv  statistics-iteration-15.csv  statistics-iteration-16.csv  statistics-iteration-17.csv  statistics-iteration-18.csv  statistics-iteration-19.csv  statistics-iteration-2.csv  statistics-iteration-20.csv  statistics-iteration-21.csv  statistics-iteration-22.csv  statistics-iteration-23.csv  statistics-iteration-24.csv  statistics-iteration-25.csv  statistics-iteration-26.csv  statistics-iteration-27.csv  statistics-iteration-28.csv  statistics-iteration-29.csv  statistics-iteration-3.csv  statistics-iteration-30.csv  statistics-iteration-4.csv  statistics-iteration-5.csv  statistics-iteration-6.csv  statistics-iteration-7.csv  statistics-iteration-8.csv  statistics-iteration-9.csv
data/data/docstring_parser/: statistics-iteration-1.csv  statistics-iteration-10.csv  statistics-iteration-11.csv  statistics-iteration-12.csv  statistics-iteration-13.csv  statistics-iteration-14.csv  statistics-iteration-15.csv  statistics-iteration-16.csv  statistics-iteration-17.csv  statistics-iteration-18.csv  statistics-iteration-19.csv  statistics-iteration-2.csv  statistics-iteration-20.csv  statistics-iteration-21.csv  statistics-iteration-22.csv  statistics-iteration-23.csv  statistics-iteration-24.csv  statistics-iteration-25.csv  statistics-iteration-26.csv  statistics-iteration-27.csv  statistics-iteration-28.csv  statistics-iteration-29.csv  statistics-iteration-3.csv  statistics-iteration-30.csv  statistics-iteration-4.csv  statistics-iteration-5.csv  statistics-iteration-6.csv  statistics-iteration-7.csv  statistics-iteration-8.csv  statistics-iteration-9.csv
data/data/flutes/: statistics-iteration-1.csv  statistics-iteration-10.csv  statistics-iteration-11.csv  statistics-iteration-12.csv  statistics-iteration-13.csv  statistics-iteration-14.csv  statistics-iteration-15.csv  statistics-iteration-16.csv  statistics-iteration-17.csv  statistics-iteration-18.csv  statistics-iteration-19.csv  statistics-iteration-2.csv  statistics-iteration-20.csv  statistics-iteration-21.csv  statistics-iteration-22.csv  statistics-iteration-23.csv  statistics-iteration-24.csv  statistics-iteration-25.csv  statistics-iteration-26.csv  statistics-iteration-27.csv  statistics-iteration-28.csv  statistics-iteration-29.csv  statistics-iteration-3.csv  statistics-iteration-30.csv  statistics-iteration-4.csv  statistics-iteration-5.csv  statistics-iteration-6.csv  statistics-iteration-7.csv  statistics-iteration-8.csv  statistics-iteration-9.csv
data/data/flutils/: statistics-iteration-1.csv  statistics-iteration-10.csv  statistics-iteration-11.csv  statistics-iteration-12.csv  statistics-iteration-13.csv  statistics-iteration-14.csv  statistics-iteration-15.csv  statistics-iteration-16.csv  statistics-iteration-17.csv  statistics-iteration-18.csv  statistics-iteration-19.csv  statistics-iteration-2.csv  statistics-iteration-20.csv  statistics-iteration-21.csv  statistics-iteration-22.csv  statistics-iteration-23.csv  statistics-iteration-24.csv  statistics-iteration-25.csv  statistics-iteration-26.csv  statistics-iteration-27.csv  statistics-iteration-28.csv  statistics-iteration-29.csv  statistics-iteration-3.csv  statistics-iteration-30.csv  statistics-iteration-4.csv  statistics-iteration-5.csv  statistics-iteration-6.csv  statistics-iteration-7.csv  (+2 more)
data/notebooks/: evaluation.ipynb  extract_type_updates.py  extract_types.py
(+240 files in other folders)
